Fixed text wrapping.

--- a/Latex/kursinis_darbas.tex
+++ b/Latex/kursinis_darbas.tex
@@ -37,9 +37,9 @@
 \includegraphics[scale=0.5]{MIF}
 \end{center}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% TITULINIO PUSLAPIO TEKSTAS
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%
+% TITULINIS PUSLAPIS
+%%%%%%%%%%%%%%%%%%%%%%%
 
 \vskip 20pt
 \centerline{\bf \large \textbf{VILNIAUS UNIVERSITETAS}}
@@ -80,7 +80,8 @@
 
 %%%%%%%%%%%%%%%%%%%%%
 % TURINIO PUSLAPIS
-%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%%%%%%%%%%%%%%
+
 \tableofcontents
 \newpage
 
@@ -89,70 +90,69 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section*{Santrauka}
-Širdies regeneracijos procesų tyrinėjimas yra svarbi sritis, galinti
-prisidėti prie širdies ligų gydymo bei širdies audinių atstatymo po
-pažeidimų (pvz., širdies raumens plyšimo). Sėkmingam ląstelių regeneracijos
-taikymui praktikoje svarbu suprasti šio proceso mechanizmus bei išsiaiškinti
-juose dalyvaujančius genus bei jų svarbą, todėl šiame darbe buvo analizuojamas
-Tbx5 kardiogeninis transkripcijos faktorius, kuris stipriai prisideda prie
-įvairių genų, dalyvaujančių širdies vystymosi embriogenezės metu bei audinio
-atstatyme regeneracijos metu, aktyvavimo. Šio transkripcijos faktoriaus svarba
-išryškėja tiriant įvairius vystymosi defektus - šį
-transkripcijos faktorių koduojančio geno mutacijos yra glaudžiai susijusios su
-organizmo vystymosi sutrikimais, įtakojančiais širdies dalių bei viršutinių
-galūnių formavimosi anomalijas.
+Širdies regeneracijos procesų tyrinėjimas yra svarbi sritis, galinti prisidėti
+prie širdies ligų gydymo bei širdies audinių atstatymo po pažeidimų (pvz.,
+širdies raumens plyšimo). Sėkmingam ląstelių regeneracijos taikymui praktikoje
+svarbu suprasti šio proceso mechanizmus bei išsiaiškinti juose dalyvaujančius
+genus bei jų svarbą, todėl šiame darbe buvo analizuojamas Tbx5 kardiogeninis
+transkripcijos faktorius, kuris stipriai prisideda prie įvairių genų,
+dalyvaujančių širdies vystymosi embriogenezės metu bei audinio atstatyme
+regeneracijos metu, aktyvavimo. Šio transkripcijos faktoriaus svarba išryškėja
+tiriant įvairius vystymosi defektus - šį transkripcijos faktorių koduojančio
+geno mutacijos yra glaudžiai susijusios su organizmo vystymosi sutrikimais,
+įtakojančiais širdies dalių bei viršutinių galūnių formavimosi anomalijas.
                                                                                      
-Šiame darbe, naudojantis R programavimo kalbos bibliotekomis,
-bioinformatiniais komandinės eilutės įrankiais ir internetinėmis duomenų
-analizės priemonėmis, tirti ChIP sekoskaitos duomenys. Analizės metu
-nustatyta, kokiuose naminės pelės (lot. \emph{Mus musculus}) ląstelių
-pikų mėginiuose Tbx5 transkripcijos faktoriaus motyvų yra daugiausiai bei
-kokie motyvai gali būti identifikuoti analizuojamuose mėginiuose.
+Šiame darbe, naudojantis R programavimo kalbos bibliotekomis, bioinformatiniais
+komandinės eilutės įrankiais ir internetinėmis duomenų analizės priemonėmis,
+tirti ChIP sekoskaitos duomenys. Analizės metu nustatyta, kokiuose naminės
+pelės (lot. \emph{Mus musculus}) ląstelių pikų mėginiuose Tbx5 transkripcijos
+faktoriaus motyvų yra daugiausiai bei kokie motyvai gali būti identifikuoti
+analizuojamuose mėginiuose.
 
-Atlikta statistinė duomenų analizė parodė, kad panašiose ląstelėse,
-kurioms buvo taikytos skirtingos eksperimentinės sąlygos, ChIP sekoskaitos
-duomenys bei Tbx5 transkripcijos faktoriaus motyvų skaičius skiriasi itin
-stipriai, tačiau \emph{de novo} identifikuotuose motyvuose vyrauja bendra
-tendencija - identifikuoti motyvai yra susiję su ląstelių diferenciacija
-bei gali būti reikšmingi regeneracijos procese.
+Atlikta statistinė duomenų analizė parodė, kad panašiose ląstelėse, kurioms
+buvo taikytos skirtingos eksperimentinės sąlygos, ChIP sekoskaitos duomenys
+bei Tbx5 transkripcijos faktoriaus motyvų skaičius skiriasi itin stipriai,
+tačiau \emph{de novo} identifikuotuose motyvuose vyrauja bendra tendencija -
+identifikuoti motyvai yra susiję su ląstelių diferenciacija bei gali būti
+reikšmingi regeneracijos procese.
 
 \hfill \break
 \textbf{Raktiniai žodžiai:} regeneracija, ChIP sekoskaita (ChIP-seq),
     transkripcijos faktorius, Tbx5, motyvas, R.
 \newpage
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % ANGLIŠKOS SANTRAUKOS PUSLAPIS
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section*{Summary}
 The investigation of regeneration processes is an important field of research
 that may play a significant role in heart disease treatment and heart tissue
-repair after physical heart damage (for example, cardiac rupture).
-Therefore, in order to successfully apply cell regeneration methods in practice,
-it is mandatory to determine and apprehend the mechanisms and gene
-products that regulate regeneration processes. Due to this reason, in this
-work Tbx5 cardiogenic transcription factor was chosen as the main target
-for the analysis. Tbx5 transcription factor is involved in activation of the
-genes that are essential for heart development during embryogenesis and
-tissue repair during regeneration. The function of the Tbx5 transcription factor
-is important to the overall development of the organisms -  it was determined that
-\emph{Tbx5} gene mutations cause developmental disorders affecting the
+repair after physical heart damage (for example, cardiac rupture). Therefore,
+in order to successfully apply cell regeneration methods in practice, it is
+mandatory to determine and apprehend the mechanisms and gene products that
+regulate regeneration processes. Due to this reason, in this work Tbx5
+cardiogenic transcription factor was chosen as the main target for the
+analysis. Tbx5 transcription factor is involved in activation of the genes
+that are essential for heart development during embryogenesis and tissue
+repair during regeneration. The function of the Tbx5 transcription factor is
+important to the overall development of the organisms -  it was determined
+that \emph{Tbx5} gene mutations cause developmental disorders affecting the
 heart and upper limbs.
 
-In this work, the analysis of the ChIP sequencing samples that were
-retrieved from different house mouse (lat. \emph{Mus musculus}) cells was
-conducted using functions from R programming language libraries. Several
-analysis' steps were performed using bioinformatics' command-line tools and
-online services in order to determine what type of house mouse cells has
-the greatest number of Tbx5 transcription factor motif sequences and what
-other motifs can be identified in the samples of interest.
+In this work, the analysis of the ChIP sequencing samples that were retrieved
+from different house mouse (lat. \emph{Mus musculus}) cells was conducted using
+functions from R programming language libraries. Several analysis' steps were
+performed using bioinformatics' command-line tools and online services in order
+to determine what type of house mouse cells has the greatest number of Tbx5
+transcription factor motif sequences and what other motifs can be identified in
+the samples of interest.
 
 The undertaken statistical analysis indicated that ChIP sequencing data and
-Tbx5 transcription factor motif count notably differ between analyzed
-samples. On the other hand, after performing \emph{de novo} motif discovery, it
-was determined that identified motifs are all related to cell differentiation
-and may contribute to regeneration process mechanisms.
+Tbx5 transcription factor motif count notably differ between analyzed samples.
+On the other hand, after performing \emph{de novo} motif discovery, it was
+determined that identified motifs are all related to cell differentiation and
+may contribute to regeneration process mechanisms.
 
 \hfill \break
 \textbf{Keywords:} regeneration, ChIP sequencing (ChIP-seq),
@@ -244,20 +244,26 @@ apie tyrimui atlikti naudotus duomenis, surinktus iš naminių pelių
         \textbf{Antikūnai} & \textbf{\thead{PubMed ID;\\ GTRD ID}} \\
     \hline
     \emph{crdc\_mscl\_r1\_2} & \thead{HL - 1\\ (širdies raumens)} & C57BL/6J &
-                \thead{TRE\\ promotorius\\ (2 d.)} & - & \thead{21415370\cite{ARTCL1};\\EXP030898}\\ 
+                \thead{TRE\\ promotorius\\ (2 d.)} & - &
+                \thead{21415370\cite{ARTCL1};\\EXP030898}\\ 
     \hline
     \emph{heart\_r1\_1} & Širdies prieširdžių & C57BL/6 & - &
-                \thead{Tbx5\\ (sc-17866)} & \thead{31080136\cite{ARTCL2};\\EXP058852}\\
+                \thead{Tbx5\\ (sc-17866)} &
+                \thead{31080136\cite{ARTCL2};\\EXP058852}\\
     \hline
     \emph{emb\_fibr\_r1\_1} & \thead{MEF\\ (embrionų fibroblastai)} & C57BL/6 &
                 \thead{AGHMT\\ (2 d.)} & \thead{anti-Tbx5\\ (sc-17866)} &
                 \thead{31080136\cite{ARTCL2};\\EXP058843}\\
     \hline
-    \emph{emb\_fibr\_r2\_2} & \thead{MEF\\ (embrionų fibroblastai)} & C57BL/6 & \thead{GHMT\\ (2 d.)} &
-                \thead{Tbx5\\ (sc-17866)} & \thead{31080136\cite{ARTCL2};\\EXP058847}\\
+    \emph{emb\_fibr\_r2\_2} & \thead{MEF\\ (embrionų fibroblastai)} &
+                C57BL/6 & \thead{GHMT\\ (2 d.)} &
+                \thead{Tbx5\\ (sc-17866)} &
+                \thead{31080136\cite{ARTCL2};\\EXP058847}\\
     \hline
-    \emph{emb\_fibr\_r3\_3} & \thead{MEF\\ (embrionų fibroblastai)} & C57BL/6 & \thead{GMT\\ (2 d.)} &
-                \thead{Tbx5\\ (sc-17866)} & \thead{31080136\cite{ARTCL2};\\EXP058850}\\
+    \emph{emb\_fibr\_r3\_3} & \thead{MEF\\ (embrionų fibroblastai)} &
+                C57BL/6 & \thead{GMT\\ (2 d.)} &
+                \thead{Tbx5\\ (sc-17866)} &
+                \thead{31080136\cite{ARTCL2};\\EXP058850}\\
     \hline
     \emph{emb\_fibr\_r4\_4} & \thead{MEF\\ (embrionų fibroblastai)} & C57BL/6 &
                 \thead{vienas\\ faktorius (2 d.)} & \thead{Tbx5\\ (sc-17866)} &
@@ -341,8 +347,8 @@ nepriklausomuose straipsniuose.
 \textbf{Penkių viename straipsnyje aprašytų eksperimentų apžvalga:}
 \begin{itemize}
     \item \textbf{EXP058852}: prieširdžių ląstelės buvo du kartus po 24
-    valandas laikytos mišinyje su retrovirusais. Papildomi poveikiai nebuvo
-    taikyti.
+        valandas laikytos mišinyje su retrovirusais. Papildomi poveikiai nebuvo
+        taikyti.
     \item \textbf{EXP058843}: embrionų fibroblastai veikti AGHMT. Esant
         prisijungusiems kardiogeniniams transkripcijos faktoriams, Akt1
         skatina fibroblastų diferenciaciją į širdies ląsteles - kardiomiocitus.
@@ -354,9 +360,9 @@ nepriklausomuose straipsniuose.
   \end{itemize}
 \newpage
 
-%%%%%%%%%%%%
-% METODAI
-%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%
+% TYRIMO METODAI
+%%%%%%%%%%%%%%%%%%%
 
 \section{Tyrimo metodai}
 Tbx5 transkripcijos faktoriaus pikų tyrimo analizė atlikta su R programavimo
@@ -487,18 +493,18 @@ Antrajame paveiksle (2 pav.) vaizduojama analizės etapus apibendrinanti schema:
 % GAUTŲ REZULTATŲ APŽVALGA
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% REGIONŲ SKAIČIUS MĖGINIUOSE
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% PIKŲ SKAIČIUS MĖGINIUOSE
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Rezultatai ir jų aptarimas}
 \subsection{Pikų skaičiaus skirtumai tarp mėginių}
 Prieš pradedant Tbx5 motyvo paiešką, visiems mėginiams taikytas statistinis
 duomenų vizualizavimas, siekiant įvertinti ChIP sekoskaitos duomenis bei
 nustatyti, kaip skiriasi mėginiai, kuriuose tirtoms panašioms ląstelėms
-taikyti skirtingi poveikiai.
-Trečiame paveiksle (3 pav.) pateikiamoje stulpelinėje diagramoje vaizduojamas
-pikų skaičiaus pasiskirstymas skirtinguose mėginiuose.
+taikyti skirtingi poveikiai. Trečiame paveiksle (3 pav.) pateikiamoje
+stulpelinėje diagramoje vaizduojamas pikų skaičiaus pasiskirstymas
+skirtinguosemėginiuose.
 
 \begin{figure}[htb]
     \begin{center}
@@ -511,22 +517,21 @@ pikų skaičiaus pasiskirstymas skirtinguose mėginiuose.
 
 Remiantis diagrama didžiausias pikų skaičius
 nustatytas mėginyje \small\emph{emb\_fibr\_r1\_1}, kuriame pelių embrionų
-fibroblastų ląstelės veiktos AGHMT faktoriais.
-Šį rezultatą palyginus su kitais to paties eksperimento mėginiais, kuriuose
-tirtas tas pats pelių embrionų fibroblastų ląstelių kamienas, tačiau ląstelės
-veiktos tik kai kuriais faktoriais, pastebimas gradualus pikų skaičiaus
-mažėjimas diagramoje
+fibroblastų ląstelės veiktos AGHMT faktoriais. Šį rezultatą palyginus su kitais
+to paties eksperimento mėginiais, kuriuose tirtas tas pats pelių embrionų
+fibroblastų ląstelių kamienas, tačiau ląstelės veiktos tik kai kuriais
+faktoriais, pastebimas gradualus pikų skaičiaus mažėjimas diagramoje
 \small\emph{emb\_fibr\_r2\_2}, \small\emph{emb\_fibr\_r3\_3} ir
-\small\emph{emb\_fibr\_r4\_4} pavaizduotuose stulpeliuose (pažymėta
-oranžine spalva). Tarp šių mėginių pikų skirtumai ypač ryškūs - pikų
-skaičius skiriasi \(\sim\)25 tūkst. ir \(\sim\)100 tūkst. pikų.
+\small\emph{emb\_fibr\_r4\_4} pavaizduotuose stulpeliuose (pažymėta oranžine
+spalva). Tarp šių mėginių pikų skirtumai ypač ryškūs - pikų skaičius skiriasi
+\(\sim\)25 tūkst. ir \(\sim\)100 tūkst. pikų.
 
 Mažiausiai pikų nustatyta mėginyje, kuriame tirti pelių naujagimių širdies
 fibroblastai paveikti inhibitoriais. Nepaisant to, kad naudoti inhibitoriai
 skatina širdies ląstelių diferenciaciją\cite{HEART_CELL_DIFF_ARTCL}, ir darant
-prielaidą, kad ChIP sekoskaitos duomenys yra tikslūs ir juose nėra
-metodo klaidų, mažas pikų skaičius rodo, kad papildomas veikimas inhibitoriais
-gali daryti mažą įtaką transkripcijos faktoriaus jungimuisi prie DNR sekų.
+prielaidą, kad ChIP sekoskaitos duomenys yra tikslūs ir juose nėra metodo
+klaidų, mažas pikų skaičius rodo, kad papildomas veikimas inhibitoriais gali
+daryti mažą įtaką transkripcijos faktoriaus jungimuisi prie DNR sekų.
 
 Remiantis gautais rezultatais pikų skaičius skirtingais poveikiais veiktose
 panašiose ląstelėse varijuoja itin stipriai, tačiau šiuos rezultatus reikia
@@ -535,22 +540,21 @@ duomenų paruošimo netikslumus.
 
 \newpage
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % PIKŲ SKAIČIUS ATSKIROSE CHROMOSOMOSE
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \subsection{Pikų pasiskirstymas chromosomose}
 Antrajame statistinių duomenų vaizdavimo etape patikrinta, kaip mėginių pikai
 pasiskirstę atskirose chromosomose, atlikus normalizavimą pagal chromosomų ilgį.
 
-Vaizduojamuose grafikuose (4 pav.) didžiausias pikų skaičius po
-normalizavimo nustatytas penktoje, vienuoliktoje ir devynioliktoje
-chromosomose. Šiose chromosomose didžiausią pikų skaičių turėjo mėginys,
-kuriame tirtos iš naminių pelių širdies raumens išskirtos ląstelės, bei
-mėginys, kuriame embrionų fibroblastai veikti AGHMT faktorių komplektu.
-Taip pat galima pastebėti, kad pastarojo mėginio pikų skaičius beveik
-visose chromosomose yra daug didesnis nei kituose mėginiuose apskaičiuotas
-pikų skaičius.
+Vaizduojamuose grafikuose (4 pav.) didžiausias pikų skaičius po normalizavimo
+nustatytas penktoje, vienuoliktoje ir devynioliktoje chromosomose. Šiose
+chromosomose didžiausią pikų skaičių turėjo mėginys, kuriame tirtos iš naminių
+pelių širdies raumens išskirtos ląstelės, bei mėginys, kuriame embrionų
+fibroblastai veikti AGHMT faktorių komplektu. Taip pat galima pastebėti, kad
+pastarojo mėginio pikų skaičius beveik visose chromosomose yra daug didesnis
+nei kituose mėginiuose apskaičiuotas pikų skaičius.
 
 Mažiausias pikų skaičius nustatytas lytinėse - X ir Y - chromosomose.
 
@@ -564,11 +568,11 @@ Mažiausias pikų skaičius nustatytas lytinėse - X ir Y - chromosomose.
 \end{figure}
 
 Iš visų chromosomų išsiskiria vienuolikta chromosoma. Remiantis MGI\cite{MGI}
-(angl. \emph{Mouse Genome Informatics})
-svetainės duomenimis, vienuoliktos \emph{Mus musculus} chromosomos
-dydis - 122 megabazės, todėl gautas didžiausias pikų skaičius šioje
-chromosomoje gali indikuoti, kad prie šioje chromosomoje esančių nukleotidų
-sekų transkripcijos faktoriai jungiasi dažniau nei kitose chromosomose.
+(angl. \emph{Mouse Genome Informatics}) svetainės duomenimis, vienuoliktos
+\emph{Mus musculus} chromosomos dydis - 122 megabazės, todėl gautas didžiausias
+pikų skaičius šioje chromosomoje gali indikuoti, kad prie šioje chromosomoje
+esančių nukleotidų sekų transkripcijos faktoriai jungiasi dažniau nei kitose
+chromosomose.
 
 Remiantis pavaizduotomis pikų skaičiaus pasiskirstymo chromosomose
 stulpelinėmis diagramomis, nustatyta, kad kai kuriose chromosomose mėginių
@@ -580,9 +584,9 @@ jo nėra.
 
 \newpage
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % TARP MĖGINIŲ PERSIDENGIANTYS REGIONAI
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \subsection{Tarp mėginių persidengiantys pikai}
 Paskutiniame statistinių duomenų vaizdavimo etape nustatyta persidengiančių
@@ -687,13 +691,17 @@ skaičius.
 
 \newpage
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% DE NOVO MOTYVŲ PAIEŠKA
+%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 \subsection{\emph{De novo} identifikuoti motyvai}
 Remiantis 4.4 poskyryje aprašytais Tbx5 motyvo tyrimo rezultatais galima
-pastebėti, jog visuose mėginiuose Tbx5 motyvo sekų skaičius buvo mažesnis nei 18\%, todėl
-šios analizės etape buvo vykdoma \emph{de novo} motyvų paieška, siekiant
-patikrinti, ar pagal ChIP sekoskaitos duomenis gautuose FASTA formato sekų
-rinkiniuose galima identifikuoti motyvų, kurių sekų fragmentų būtų daugiau
-nei Tbx5 motyvo sekų.
+pastebėti, jog visuose mėginiuose Tbx5 motyvo sekų skaičius buvo mažesnis
+nei 18\%, todėl šios analizės etape buvo vykdoma \emph{de novo} motyvų
+paieška, siekiant patikrinti, ar pagal ChIP sekoskaitos duomenis gautuose
+FASTA formato sekų rinkiniuose galima identifikuoti motyvų, kurių sekų
+fragmentų būtų daugiau nei Tbx5 motyvo sekų.
 
 \emph{De novo} motyvų paieškos programos vykdymas buvo ilgiausiai trukęs
 analizės etapas, lyginant su kitais analizės etapais. Šio etapo metu buvo
@@ -706,10 +714,10 @@ Antroje lentelėje (2 lentelė) kiekvienam mėginiui pateikti trys identifikuoti
 motyvai, turintys mažiausią \emph{p}-vertę.
 Šalia identifikuoto transkripcijos faktoriaus (TF) motyvo skliausteliuose
 nurodyta transkripcijos faktorių klasė, kuriai priklauso identifikuotas
-motyvas. Kiekvienas transkripcijos faktorius pagal savo prisijungimo
-prie DNR domeną yra priskiriamas atitinkamai superklasei (T-box, MADS, Zf, bZIP).
-Ketvirtame antros lentelės stulpelyje nurodyta, kokia mėginio pikų dalis
-turėjo Tbx5 motyvą.
+motyvas. Kiekvienas transkripcijos faktorius pagal savo prisijungimo prie DNR
+domeną yra priskiriamas atitinkamai superklasei (T-box, MADS, Zf, bZIP).
+Ketvirtame antros lentelės stulpelyje nurodyta, kokia mėginio pikų dalis turėjo
+Tbx5 motyvą.
 
 \begin{table}[htb]
     \newcolumntype{M}[1]{>{\centering\arraybackslash}m{#1}}
@@ -722,13 +730,13 @@ turėjo Tbx5 motyvą.
                        \textbf{\thead{Identifikuoto TF\\ procentinė dalis}} &
                        \textbf{\thead{Tbx5 motyvą turinčių\\ pikų dalis}} \\
     \hlineB{2.5}
-    \multirow{3}{*}{\textbf{\emph{crdc\_mscl\_r1\_2*}}} & Tbx6(T-box)  & 20.28\% &
-                                                \multirow{3}{*}{54.87\%} \\
+    \multirow{3}{*}{\textbf{\emph{crdc\_mscl\_r1\_2*}}} & Tbx6(T-box)  & 
+                    20.28\% & \multirow{3}{*}{54.87\%} \\
     \cline{2-3}                                 & Tbet(T-box)  & 16.48\% & \\
     \cline{2-3}                                 & Eomes(T-box) & 25.49\% & \\
     \hlineB{2.5}
-    \multirow{3}{*}{\textbf{\emph{emb\_fibr\_r1\_4*}}} & Mef2b(MADS) & 15.60\% &
-                                               \multirow{3}{*}{44.22\%} \\
+    \multirow{3}{*}{\textbf{\emph{emb\_fibr\_r1\_4*}}} & Mef2b(MADS) &
+                    15.60\% & \multirow{3}{*}{44.22\%} \\
     \cline{2-3}                                & TRPS1(Zf) & 31.99\% & \\
     \cline{2-3}                                & GATA3(Zf) & 25.49\% & \\
     \hlineB{2.5}
@@ -752,8 +760,8 @@ turėjo Tbx5 motyvą.
     \cline{2-3}                                & GATA3(Zf) & 52.43\% & \\
     \cline{2-3}                                & GATA4(Zf) & 38.94\% & \\
     \hlineB{2.5}
-    \multirow{3}{*}{\textbf{\emph{crdc\_fibr\_r1\_3*}}} & Tbx6(T-box) & 38.28\% &
-                                                \multirow{3}{*}{69.71\%} \\
+    \multirow{3}{*}{\textbf{\emph{crdc\_fibr\_r1\_3*}}} & Tbx6(T-box) &
+                    38.28\% & \multirow{3}{*}{69.71\%} \\
     \cline{2-3}                                 & Tbet(T-box) & 33.27\% & \\
     \cline{2-3}                                 & Tbx21(T-box) & 30.60\% & \\
     \hline
@@ -763,15 +771,15 @@ turėjo Tbx5 motyvą.
 \let\thefootnote\relax\footnotetext{\textbf{*} - identifikuotas Tbx5 motyvas
 statistiškai patikimas.}
 
-Remiantis antros lentelės (2 lentelė) duomenimis dažniausias mėginiuose pasikartojantis
-motyvas priklauso TRPS1 ir GATA3 transkripcijos faktoriams. Didžiausia
-Tbx5 motyvo procentinė dalis, atlikus \emph{de novo} motyvų paiešką su HOMER
-įrankiu, nustatyta tarp širdies raumens ląstelių mėginio bei širdies
+Remiantis antros lentelės (2 lentelė) duomenimis dažniausias mėginiuose
+pasikartojantis motyvas priklauso TRPS1 ir GATA3 transkripcijos faktoriams.
+Didžiausia Tbx5 motyvo procentinė dalis, atlikus \emph{de novo} motyvų paiešką
+su HOMER įrankiu, nustatyta tarp širdies raumens ląstelių mėginio bei širdies
 fibroblastų, veiktų inhibitoriais, mėginio (\small\emph{crdc\_mscl\_r1\_2},
 \small\emph{crdc\_fibr\_r1\_3}). Mėginyje, kuriame tirtos iš naminių pelių
 širdžių prieširdžių išgautos ląstelės (\small\emph{heart\_r1\_1}),
-identifikuotas Tbx5 motyvas nėra statistiškai patikimas, atsižvelgus į
-itin didelę \emph{p}-vertę. 
+identifikuotas Tbx5 motyvas nėra statistiškai patikimas, atsižvelgus į itin
+didelę \emph{p}-vertę. 
 
 Pateiktoje stulpelinėje diagramoje (7 pav.) vaizduojamas bendras identifikuotų
 skirtingų motyvų skaičius kiekvienam mėginiui.
@@ -805,6 +813,10 @@ Patikrinus, kiek vienodų motyvų aptinkama visuose mėginiuose, buvo nustatyta,
 kad 131 motyvas yra būdingas visiems analizuojamiems mėginiams.
 
 \newpage
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% DE NOVO MOTYVŲ BIOLOGINĖS FUNKCIJOS
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \subsection{\emph{De novo} nustatytų motyvų biologinės funkcijos}
 Identifikavus motyvus, buvo nustatytos su šiais motyvais susijusių genų
